# flash-moe

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  additional_model_compatibility.md  bench_capacity_128.py  bench_fast_warmup.py  bench_rebuild_methods.py  bench_same_domain_delta.py  bench_scatter_slots.py  final_validation.md  generate_lazy.py  generate_persistent.py  generate_streaming.py  main.py  mixtral_gap_analysis.md  pyproject.toml  test_generalization.py  test_router_overlap.py  test_select_capacity.py  tests.md  universal_experts.json  validate_quality.py
analysis/: analyze_expert_log.py  expert_reuse_results.md  llama_cpp_instrumentation.md  sample_expert_log.csv  viability_calc.py
benchmarks/: adaptive_pinned_qwen.json  adaptive_qwen.json  bench_adaptive.py  bench_batched_loading.py  bench_broad_prompts.py  bench_cache_limit.py  bench_capacity_128.py  bench_coldstart.py  bench_context_growth.py  bench_delta_phases.py  bench_discovery_degradation.py  bench_discovery_depth.py  bench_discovery_speed.py  bench_eval_cost.py  bench_fast_warmup.py  bench_full_model.py  bench_long_gen.py  bench_metal_residency.py  bench_multiturn.py  bench_per_token.py  bench_pinning.py  bench_pressure_cliff.py  bench_same_domain_delta.py  bench_scatter_delta.py  bench_scatter_slots.py  bench_shard_loading.py  bench_stale_fallback.py  bench_warmup.py  benchmark_backends.py  benchmark_mlx_server.py  cache_verify.py  context_growth_qwen.json  glm_experts.json  io_trace.py  madvise_bench.py  metal_residency_results.json  multiturn_qwen.json  multiturn_qwen_pinned.json  (+14 more)
(+57 files in other folders)
