[project]
name = "mlx-moe"
version = "0.1.0"
description = "Run large MoE models on memory-constrained Macs via on-demand expert loading"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.30.0",
    "numpy>=2.0.0",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
mlx-moe = "mlx_moe.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
